# CoMe-SoftwareLab-PocketFEM

./: README.md
AndroidBasedFEM/app/: CMakeLists.txt  build.gradle
AndroidBasedFEM/app/src/androidTest/java/com/example/softwarelab/androidbasedfem/: ExampleInstrumentedTest.java
AndroidBasedFEM/app/src/main/: AndroidManifest.xml
AndroidBasedFEM/app/src/main/assets/: displacements.json  document.json  tum.json
AndroidBasedFEM/app/src/main/cpp/: native-lib.cpp
AndroidBasedFEM/app/src/main/java/com/example/softwarelab/androidbasedfem/: MainActivity.java
AndroidBasedFEM/app/src/main/java/com/example/softwarelab/androidbasedfem/Fragments/: fragment_BoundaryConditions.java  fragment_CreateGeometry.java  fragment_DefineMaterial.java  fragment_GenerateMesh.java  fragment_Results.java  fragment_ResultsModal.java  fragment_Solve.java  fragment_StartingPage.java
AndroidBasedFEM/app/src/main/java/com/example/softwarelab/androidbasedfem/Rendering/: BoundaryCondition.java  ForceArrow.java  Geometry.java  Rectangle.java  Renderer.java  RollerSupport.java  ShaderHelper.java  Triangle.java  colorBar.java
AndroidBasedFEM/app/src/main/java/com/example/softwarelab/androidbasedfem/Utils/: LoggerConfig.java  TextResourceReader.java
AndroidBasedFEM/app/src/main/res/drawable/: ic_widgets_black_24dp.xml
AndroidBasedFEM/app/src/main/res/drawable-mdpi/: ic_library_add_black_24dp.xml
AndroidBasedFEM/app/src/main/res/layout/: activity_main.xml  header_leftnavigationmenu.xml  header_rightnavigationmenu.xml  layout_boundaryconditions.xml  layout_creategeometry.xml  layout_definematerial.xml  layout_generatemesh.xml  layout_resultsmodal.xml  layout_reults.xml  layout_solve.xml  layout_startingpage.xml  popup_addmaterial.xml  popup_applyload.xml  popup_creategeometry_rectangle.xml  popup_deleteselectedgeometry.xml  popup_loadgeometry.xml  popup_showfrequencyresponse.xml  popup_shownodalresult.xml  popup_shownodalresults_modal.xml  popup_solver_status.xml
AndroidBasedFEM/app/src/main/res/menu/: leftnavigationmenu.xml
AndroidBasedFEM/app/src/main/res/raw/: fragment_shader.glsl  fragment_shader_nonuniform.glsl  vertex_shader_nonuniform.glsl
AndroidBasedFEM/app/src/main/res/values/: colors.xml  strings.xml
AndroidBasedFEM/app/src/test/java/com/example/softwarelab/androidbasedfem/: ExampleUnitTest.java
AndroidBasedFEM/gradle/wrapper/: gradle-wrapper.properties
JsonTamplates/: material.json  meshedGeometry.json  rawGeometries.json
MatlabConvergence/: convergence.fig  convergence.m  convergence.m~
RequiredJsons/: displacements.json  geometry.json
SoftwareLabDemo/app/: build.gradle
SoftwareLabDemo/app/src/androidTest/java/com/example/berkayalpcakal/softwarelabdemo/: ExampleInstrumentedTest.java
SoftwareLabDemo/app/src/main/: AndroidManifest.xml
SoftwareLabDemo/app/src/main/assets/: document.json  rawGeometries.json
SoftwareLabDemo/app/src/main/java/com/example/berkayalpcakal/softwarelabdemo/: MainActivity.java
SoftwareLabDemo/app/src/main/java/com/example/berkayalpcakal/softwarelabdemo/Fragments/: fragment_CreateGeometry.java  fragment_DefineMaterial.java  fragment_GenerateMesh.java
SoftwareLabDemo/app/src/main/java/com/example/berkayalpcakal/softwarelabdemo/Rendering/: Geometry.java  Rectangle.java  Renderer.java  ShaderHelper.java  Triangle.java
SoftwareLabDemo/app/src/main/java/com/example/berkayalpcakal/softwarelabdemo/Utils/: LoggerConfig.java  TextResourceReader.java
SoftwareLabDemo/app/src/main/res/layout/: activity_main.xml  header_leftnavigationmenu.xml  layout_creategeometry.xml  layout_definematerial.xml  layout_generatemesh.xml  popup_savegeometry.xml
SoftwareLabDemo/app/src/main/res/menu/: leftnavigationmenu.xml  rightnavigationmenu.xml
SoftwareLabDemo/app/src/main/res/raw/: vertex_shader.glsl
SoftwareLabDemo/app/src/main/res/values/: strings.xml
SoftwareLabDemo/app/src/test/java/com/example/berkayalpcakal/softwarelabdemo/: ExampleUnitTest.java
SoftwareLabDemo/gradle/wrapper/: gradle-wrapper.properties
